--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
+    <color name="green">#30CF09</color>
+    <color name="darkGreen">#249309</color>
+    <color name="blue">#0C05A9</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
